##Text encoding: utf-8

2010-07-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/Makefile.am: add gccv::Polygon class.
	* libs/gccv/item.cc: add Item::BuildPath().
	* libs/gccv/item.h: ditto.
	* libs/gccv/polygon.cc: new class.
	* libs/gccv/polygon.h: ditto.
	* libs/gcu/atom.h: add Object::GetCoords().
	* libs/gcu/object.cc: ditto.
	* libs/gcu/object.h: ditto.
	* plugins/paint/selection/lassotool.cc: select atoms inside the path.
	* plugins/paint/selection/lassotool.h: ditto.

2010-06-28  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/selection/Makefile.am: new lasso tool.
	* plugins/paint/selection/bracketstool.cc: start OnDrag() implementation.
	* plugins/paint/selection/lassotool.cc: new lasso tool.
	* plugins/paint/selection/lassotool.h: ditto.
	* plugins/paint/selection/plugin.cc: ditto.
	* plugins/paint/selection/selectiontool.cc: fixed a critical.

2010-06-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/document.cc: more renaming.
	* libs/gcr/document.h: ditto.
	* libs/gcu/element.cc: do not set locale on startup.
	* mozilla-plugin/Makefile.am: make things compile again.
	* mozilla-plugin/chem-viewer.cc: ditto.
	* plugins/paint/selection/brackets.ui: fixed appearance.
	* plugins/paint/selection/bracketstool.cc: implement properties page.
	* plugins/paint/selection/bracketstool.h: ditto.
	* programs/crystal/Makefile.am: make things compile again.
	* programs/crystal/application.cc: ditto.
	* programs/crystal/atom.cc: ditto.
	* programs/crystal/atom.h: ditto.
	* programs/crystal/atomsdlg.cc: ditto.
	* programs/crystal/celldlg.cc: ditto.
	* programs/crystal/cleavage.cc: ditto.
	* programs/crystal/cleavage.h: ditto.
	* programs/crystal/cleavagesdlg.cc: ditto.
	* programs/crystal/document.cc: ditto.
	* programs/crystal/document.h: ditto.
	* programs/crystal/line.cc: ditto.
	* programs/crystal/line.h: ditto.
	* programs/crystal/linesdlg.cc: ditto.
	* programs/crystal/view.cc: ditto.
	* programs/crystal/view.h: ditto.